--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@open-bpmn/open-bpmn-model",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "GLSP model for BPMN 2.0",
   "license": "(GPL-3.0)",
-  "scripts": {
-    "prepare": "yarn clean && yarn build && yarn lint",
-    "clean": "rimraf lib tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "lint": "eslint -c ../.eslintrc.js --ext .ts,.tsx ./src",
-    "watch": "tsc -w"
-  },
-  "dependencies": {
-    "@eclipse-glsp/client": "1.1.0-RC10"
-  },
+  "main": "lib/index",
+  "types": "lib/index",
   "files": [
     "lib",
     "src"
   ],
-  "main": "lib/index",
-  "types": "lib/index"
+  "scripts": {
+    "build": "tsc",
+    "clean": "rimraf lib tsconfig.tsbuildinfo",
+    "lint": "eslint -c ../.eslintrc.js --ext .ts,.tsx ./src",
+    "prepare": "yarn clean && yarn build && yarn lint",
+    "watch": "tsc -w"
+  },
+  "dependencies": {
+    "@eclipse-glsp/client": "1.1.0-RC10"
+  }
 }
