--- a/open-bpmn.glsp-client/open-bpmn-properties/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/package.json
@@ -1,28 +1,28 @@
 {
   "name": "@open-bpmn/open-bpmn-properties",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "GLSP property panel for BPMN 2.0",
   "license": "(GPL-3.0)",
-  "dependencies": {
-    "@eclipse-glsp/client": "1.1.0-RC10",
-    "@open-bpmn/open-bpmn-model": "1.0.3",
-    "@jsonforms/core": "3.0.0",
-    "@jsonforms/react": "3.0.0",
-    "@jsonforms/vanilla-renderers": "3.0.0",
-    "balloon-css": "^0.5.0"
-  },
-  "scripts": {
-    "prepare": "yarn clean && yarn build && yarn lint",
-    "clean": "rimraf lib tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "lint": "eslint -c ../.eslintrc.js --ext .ts,.tsx ./src",
-    "watch": "tsc -w"
-  },
+  "main": "lib/index",
+  "types": "lib/index",
   "files": [
     "lib",
     "src",
     "css"
   ],
-  "main": "lib/index",
-  "types": "lib/index"
+  "scripts": {
+    "build": "tsc",
+    "clean": "rimraf lib tsconfig.tsbuildinfo",
+    "lint": "eslint -c ../.eslintrc.js --ext .ts,.tsx ./src",
+    "prepare": "yarn clean && yarn build && yarn lint",
+    "watch": "tsc -w"
+  },
+  "dependencies": {
+    "@eclipse-glsp/client": "1.1.0-RC10",
+    "@jsonforms/core": "3.0.0",
+    "@jsonforms/react": "3.0.0",
+    "@jsonforms/vanilla-renderers": "3.0.0",
+    "@open-bpmn/open-bpmn-model": "1.0.4",
+    "balloon-css": "^0.5.0"
+  }
 }
