--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -18,6 +18,7 @@
       "email": "ralph.soika@imixs.com"
     }
   ],
+  "private": true,
   "workspaces": [
     "open-bpmn-model",
     "open-bpmn-properties",
@@ -39,7 +40,6 @@
     "@eclipse-glsp/config": "2.0.0",
     "rimraf": "^2.6.1",
     "lerna": "^6.1.0",
-    "rimraf": "^2.6.1",
     "typescript": "^4.9.3"
   },
   "engines": {
