--- a/open-bpmn.glsp-client/open-bpmn-theia/tsconfig.json
+++ b/open-bpmn.glsp-client/open-bpmn-theia/tsconfig.json
@@ -1,11 +1,10 @@
 {
-  "extends": "@eclipse-glsp/ts-config/tsconfig.json",
+  "extends": "@eclipse-glsp/ts-config/",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib",
-    "baseUrl": ".",
-    "reactNamespace": "JSX",
-    "types": []
+    "outDir": "lib"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
