--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -27,23 +27,28 @@
     "open-bpmn-app"
   ],
   "scripts": {
-    "build": "yarn install:only && lerna run build",
-    "install:only": "yarn install --ignore-scripts",
-    "lint": "yarn install:only && lerna run lint --",
+    "all": "yarn install && yarn lint",
+    "build": "lerna run build",
+    "clean": "lerna run clean",
+    "lint": "lerna run lint",
+    "lint:ci": "lerna run lint:ci",
     "prepare": "lerna run prepare",
     "rebuild:browser": "theia rebuild:browser",
     "start": "yarn rebuild:browser && yarn --cwd open-bpmn-app start",
     "start:external": "yarn rebuild:browser && yarn --cwd open-bpmn-app start:external",
     "watch": "lerna run --parallel watch"
   },
+  "resolutions": {
+    "string-width": "4.2.3"
+  },
   "devDependencies": {
     "@eclipse-glsp/config": "2.0.0",
     "rimraf": "^2.6.1",
-    "lerna": "^6.1.0",
-    "typescript": "^4.9.3"
+    "lerna": "^6.6.1",
+    "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=14.18.0",
+    "node": ">=16.11.0",
     "yarn": ">=1.7.0 <2.x.x"
   }
 }
