solved by migrating to v 2.1.0-next.303
issue #313

--- a/open-bpmn.glsp-client/open-bpmn-model/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-model/package.json
@@ -17,6 +17,6 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@eclipse-glsp/client": "2.0.0"
+    "@eclipse-glsp/client": "2.1.0-next.303"
   }
 }
