--- a/open-bpmn.glsp-client/open-bpmn-properties/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-properties/package.json
@@ -18,7 +18,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@eclipse-glsp/client": "2.0.0",
+    "@eclipse-glsp/client": "2.1.0-next.303",
     "@open-bpmn/open-bpmn-model": "1.2.0",
     "@jsonforms/core": "3.0.0",
     "@jsonforms/react": "3.0.0",
