fixed theia-integration to version 2.1.0
Issue #303

--- a/open-bpmn.glsp-client/open-bpmn-theia/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-theia/package.json
@@ -27,7 +27,7 @@
   ],
   "dependencies": {
     "@open-bpmn/open-bpmn-glsp": "1.2.0",
-    "@eclipse-glsp/theia-integration": "2.1.0-next.197"
+    "@eclipse-glsp/theia-integration": "2.1.0"
   },
   "scripts": {
     "prepare": "yarn  clean && yarn build",
