--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -42,10 +42,11 @@
     "string-width": "4.2.3"
   },
   "devDependencies": {
-    "@eclipse-glsp/config": "2.1.0-next.de11704.146",
-    "rimraf": "^2.6.1",
-    "lerna": "^6.6.1",
-    "typescript": "^5.2.2"
+    "@eclipse-glsp/dev": "2.0.0",
+    "@types/node": "16.x",
+    "lerna": "^7.0.0",
+    "typescript": "^5.1.3",
+    "rimraf": "^2.6.1"
   },
   "engines": {
     "node": ">=16.11.0",
