fixed pom.xml - java version
issue #325

--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.imixs.bpmn</groupId>
@@ -9,9 +11,18 @@
 	<name>Open BPMN - Server</name>
 	<description>The Open BPMN Server Project</description>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.source>17</java.source>
+		<java.target>17</java.target>
+		<project.build.java.target>17</project.build.java.target>
+		<maven.compiler.release>17</maven.compiler.release>
+		<package-type>jar</package-type>
+		<server-launcher>org.imixs.bpmn.glsp.server.launch.BPMN2ServerLauncher</server-launcher>
+		<glsp-server-version>2.0.0</glsp-server-version>
+	</properties>
 
 	<dependencies>
-	
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-model</artifactId>
@@ -31,7 +42,7 @@
 			<groupId>org.eclipse.glsp</groupId>
 			<artifactId>org.eclipse.glsp.server.websocket</artifactId>
 			<version>${glsp-server-version}</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
@@ -125,12 +136,13 @@
 						<version>3.2.4</version>
 						<configuration>
 							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>org.openbpmn.glsp.launch.BPMNServerLauncher</mainClass>
 									<manifestEntries>
 										<Multi-Release>true</Multi-Release>
 									</manifestEntries>
-								</transformer>								
+								</transformer>
 							</transformers>
 							<artifactSet>
 								<excludes>
@@ -138,7 +150,7 @@
 									<exclude>javax.websocket:javax.websocket-api</exclude>
 									<exclude>log4j:log4j</exclude>
 								</excludes>
-							</artifactSet>								
+							</artifactSet>
 							<filters>
 								<filter>
 									<artifact>*:*</artifact>
@@ -147,10 +159,14 @@
 										<exclude>META-INF/DEPENDENCIES</exclude>
 										<exclude>META-INF/ECLIPSE_*</exclude>
 										<exclude>META-INF/LICENSE*</exclude>
-										<exclude>META-INF/services/javax.servlet.ServletContainerInitializer</exclude>
-										<exclude>META-INF/services/jakarta.servlet.ServletContainerInitializer*</exclude>
-										<exclude>META-INF/services/org.eclipse.jetty.webapp.Configuration*</exclude>
-										<exclude>META-INF/services/org.eclipse.elk.core.data.ILayoutMetaDataProvider*</exclude>
+										<exclude>
+											META-INF/services/javax.servlet.ServletContainerInitializer</exclude>
+										<exclude>
+											META-INF/services/jakarta.servlet.ServletContainerInitializer*</exclude>
+										<exclude>
+											META-INF/services/org.eclipse.jetty.webapp.Configuration*</exclude>
+										<exclude>
+											META-INF/services/org.eclipse.elk.core.data.ILayoutMetaDataProvider*</exclude>
 										<exclude>META-INF/versions/9/module-info.class</exclude>
 										<exclude>META-INF/NOTICE*</exclude>
 										<exclude>.options</exclude>
