--- a/open-bpmn.metamodel/pom.xml
+++ b/open-bpmn.metamodel/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.imixs.bpmn</groupId>
@@ -11,21 +13,22 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>11</maven.compiler.release>	
+		<java.source>11</java.source>
+		<java.target>11</java.target>
+		<project.build.java.target>11</project.build.java.target>
+		<maven.compiler.release>11</maven.compiler.release>
 	</properties>
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 			</plugin>
-
 		</plugins>
 	</build>
 
 	<dependencies>
-	
 		<!-- JUnit Tests -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -33,9 +36,5 @@
 			<version>5.5.2</version>
 			<scope>test</scope>
 		</dependency>
-		
-
 	</dependencies>
-
-
 </project>
