--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,5 @@ lib
 tsconfig.tsbuildinfo
 gen-webpack.config.js
 
-# see: https://github.com/eclipse-glsp/glsp/issues/952#issuecomment-1463472294
-#**/*-app/**
-#!**/*-app/package.json
+# ignore dev model files
+workspace/dev
