--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -1,31 +1,31 @@
 {
   "name": "open-bpmn-app",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Web App for Open BPMN",
   "license": "(GPL-3.0)",
   "scripts": {
     "build": "theia build --mode development",
     "prepare": "yarn build",
     "start": "theia start --GLSP_PORT=5007 --root-dir=../workspace",
-    "start:external": "theia start --GLSP_PORT=5007 --root-dir=../workspace --debug",
+    "start:external": "theia start --GLSP_PORT=5007 --root-dir=../workspace --loglevel=debug --glspDebug",
     "watch": "theia build --watch --mode development"
   },
   "dependencies": {
-    "@open-bpmn/open-bpmn-theia": "1.2.5",
-    "@theia/core": "1.43.1",
-    "@theia/editor": "1.43.1",
-    "@theia/filesystem": "1.43.1",
-    "@theia/markers": "1.43.1",
-    "@theia/messages": "1.43.1",
-    "@theia/monaco": "1.43.1",
-    "@theia/navigator": "1.43.1",
-    "@theia/preferences": "1.43.1",
-    "@theia/process": "1.43.1",
-    "@theia/terminal": "1.43.1",
-    "@theia/workspace": "1.43.1"
+    "@open-bpmn/open-bpmn-theia": "1.2.6",
+    "@theia/core": "1.56.0",
+    "@theia/editor": "1.56.0",
+    "@theia/filesystem": "1.56.0",
+    "@theia/markers": "1.56.0",
+    "@theia/messages": "1.56.0",
+    "@theia/monaco": "1.56.0",
+    "@theia/navigator": "1.56.0",
+    "@theia/preferences": "1.56.0",
+    "@theia/process": "1.56.0",
+    "@theia/terminal": "1.56.0",
+    "@theia/workspace": "1.56.0"
   },
   "devDependencies": {
-    "@theia/cli": "1.43.1"
+    "@theia/cli": "1.56.0"
   },
   "theia": {
     "target": "browser"
