--- a/open-bpmn.glsp-client/open-bpmn-theia/tsconfig.json
+++ b/open-bpmn.glsp-client/open-bpmn-theia/tsconfig.json
@@ -5,7 +5,6 @@
     "outDir": "lib",
     "resolveJsonModule": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
