--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -44,13 +44,14 @@
   },
   "devDependencies": {
     "@eclipse-glsp/dev": "2.3.0",
-    "@types/node": "16.x",
-    "lerna": "^7.0.0",
-    "typescript": "^5.1.3",
+    "@types/node": "18.x",
+    "concurrently": "^8.2.2",
+    "lerna": "^8.1.7",
+    "typescript": "^5.5.3",
     "rimraf": "^2.6.1"
   },
   "engines": {
-    "node": ">=16.11.0",
-    "yarn": ">=1.7.0 <2.x.x"
+    "node": ">=18",
+    "yarn": ">=1.7.0 <2"
   }
 }
