--- a/open-bpmn.glsp-client/open-bpmn-app/package.json
+++ b/open-bpmn.glsp-client/open-bpmn-app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "theia build --mode development",
     "prepare": "yarn build",
-    "start": "theia start --GLSP_PORT=5007 --root-dir=./workspace",
+    "start": "theia start --GLSP_PORT=5007 --root-dir=../workspace",
     "start:external": "theia start --GLSP_PORT=5007 --root-dir=../workspace --glspDebug",
     "watch": "theia build --watch --mode development"
   },
