--- a/open-bpmn.glsp-client/package.json
+++ b/open-bpmn.glsp-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parent",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "Open BPMN 2.0",
   "homepage": "https://www.imixs.org/",
   "bugs": "https://github.com/imixs/open-bpmn/issues",
@@ -39,17 +39,12 @@
     "start:external": "yarn browser start:external",
     "watch": "lerna run --parallel watch"
   },
-  "resolutions": {
-    "string-width": "4.2.3",
-    "inversify": "6.1.3"
-  },
   "devDependencies": {
-    "@eclipse-glsp/dev": "2.3.0",
+    "@eclipse-glsp/config": "2.4.0",
     "@types/node": "18.x",
     "concurrently": "^8.2.2",
     "lerna": "^8.1.7",
-    "typescript": "^5.5.3",
-    "rimraf": "^2.6.1"
+    "typescript": "^5.5.3"
   },
   "engines": {
     "node": ">=18",
