--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ gen-webpack.config.js
 gen-webpack.node.config.js
 open-bpmn.glsp-client/open-bpmn-app/src-gen/
 
+open-bpmn.metamodel/src/test/resources/out_blank.bpmn
