--- a/open-bpmn.glsp-server/pom.xml
+++ b/open-bpmn.glsp-server/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.imixs.bpmn</groupId>
 		<artifactId>open-bpmn</artifactId>
-		<version>1.2.8</version>
+		<version>1.2.9-SNAPSHOT</version>
 	</parent>
 	<artifactId>open-bpmn.server</artifactId>
 	<name>Open BPMN - Server</name>
