fixed docker build process - running now yarn during build (issue #440)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,10 @@
+# Ignore nodejs binaries
+
+node_modules
+*/node_modules
+**/.yarn
+**/yarn.lock
+
 # Java Source und Build-Artefakte (außer JAR)
 
 open-bpmn.glsp-server/src/
